force-app/main/default/objects/Account/fields/Color_Store__c.field-meta.xml
<CustomField>
    <fullName>Color_Store__c</fullName>
    <inlineHelpText>Describe the color store please.</inlineHelpText>
    <label>Color Store</label>
    <length>20</length>
    <type>Text</type>
</CustomField>