force-app/main/default/objects/Account/fields/CONTAINSfiedl__c.field-meta.xml
<CustomField>
    <fullName>CONTAINSfiedl__c</fullName>
    <label>CONTAINSfiedl</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>