force-app/main/default/objects/Account/fields/dateToTesting__c.field-meta.xml
<CustomField>
    <fullName>dateToTesting__c</fullName>
    <label>dateToTesting</label>
    <type>Date</type>
</CustomField>