force-app/main/default/objects/Account/fields/dateToTestingFormula__c.field-meta.xml
<CustomField>
    <fullName>dateToTestingFormula__c</fullName>
    <formula>TODAY() - dateToTesting__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>dateToTestingFormula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>