force-app/main/default/objects/Account/fields/Informacion__c.field-meta.xml
<CustomField>
    <fullName>Informacion__c</fullName>
    <label>Información</label>
    <length>50</length>
    <type>Text</type>
</CustomField>